--- a/.github/workflows/Hugo.yaml
+++ b/.github/workflows/Hugo.yaml
@@ -35,7 +35,7 @@ jobs:
       HUGO_VERSION: 0.115.4
     steps:
       - name: decompression
-        run: unzip hugo-theme-next.zip
+        run: unzip /home/runner/work/blog_data/blog_data/themes/hugo-theme-next.zip
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
