--- a/.github/workflows/Hugo.yaml
+++ b/.github/workflows/Hugo.yaml
@@ -46,7 +46,7 @@ jobs:
           submodules: recursive
           fetch-depth: 0
       - name: decompression
-        run: unzip ./themes/hugo-theme-next.zip ./themes/
+        run: unzip ./themes/hugo-theme-next.zip ./themes
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
